<resources>
    <string name="app_name">Final_project</string>

    <string name="brand_name">brand name 1</string>
    <string name="slogan_name">slogan 1</string>
    <string name="powered_by">Powered By | Group</string>

    <!-- Boarding -->
    <string name="boarding_title1">Boarding1</string>
    <string name="boarding_title2">Boarding2</string>
    <string name="boarding_title3">Boarding3</string>
    <string name="boarding_title4">Boarding4</string>

    <string name="boarding_description1">description1</string>
    <string name="boarding_description2">description2</string>
    <string name="boarding_description3">description3</string>
    <string name="boarding_description4">description4</string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="getStarted_btn">Get Started</string>

    <!-- Dashboard -->
    <string name="gyms">Gyms</string>
    <string name="restaurants">Restaurants</string>
    <string name="parks">Parks</string>
    <string name="fruits_shops">Fruit shops</string>

    <string name="locations">All Featured Locations</string>
    <string name="locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_view_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">What are you looking for?</string>


    <!-- nav bar -->
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="nav_categories">nav_categories</string>
    <string name="add_missing_place">add_missing_place</string>
    <string name="login">login</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="share">share</string>
    <string name="rate">rate</string>
</resources>