<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu_icon"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/menu_icon"/>

        <item
            android:id="@+id/nav_categories"
            android:title="@string/nav_categories"
            android:icon="@drawable/menu_icon"/>

        <item
            android:id="@+id/nav_add_missing_place"
            android:title="@string/add_missing_place"
            android:icon="@drawable/menu_icon"/>

    </group>

    <item android:title="Profile">
        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/menu_icon"/>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/menu_icon"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/menu_icon"/>



            </group>
        </menu>
    </item>

    <item android:title="Share">
        <menu>
            <group
                android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/menu_icon"/>

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate"
                    android:icon="@drawable/menu_icon"/>

            </group>
        </menu>
    </item>
</menu>